Fixes 7030 column gap

--- a/src/components/activity-page/section.scss
+++ b/src/components/activity-page/section.scss
@@ -49,9 +49,6 @@
         grid-column: span 9;
         width: 105%;
         left: -50px;
-        &.max-aspect-ratio {
-          left: -50px;
-        }
       }
     }
     .column.secondary {
@@ -90,10 +87,8 @@
       grid-column: span 7;
       &.expand {
         grid-column: span 9;
-        &.max-aspect-ratio {
-          width: 105%;
-          left: -50px;
-        }
+        width: 105%;
+        left: -50px;
       }
     }
     .column.secondary {
